# InstallerLG

./: .gitignore  .travis.yml  BUGS  CHANGELOG  CMakeLists.txt  README  README.md  STATUS.txt  TODO
catalogs/: InstallerLG.cd  deutsch.ct  italiano.ct  russian.ct  svenska.ct
src/: Installer.cd  Installer.ct  InstallerLG.cd  _  all.h  alloc.c  alloc.h  args.c  args.h  arithmetic.c  arithmetic.h  bitwise.c  bitwise.h  builtin.c  builtin.h  cli.c  cli_gui.c  comparison.c  comparison.h  control.c  control.h  debug.c  debug.h  deutsch.ct  error.c  error.h  eval.c  eval.h  exit.c  exit.h  external.c  external.c_  external.h  file.c  file.h  gui.c  gui.h  information.c  information.h  init.c  (+37 more)
test/: Work  data.copylib.i1.TheBar_2617_AmigaOS3  data.copylib.i1.TheBar_2617_AmigaOS4  data.copylib.i1.TheBar_2617_Aros_i386  data.copylib.i1.TheBar_2617_Aros_ppc  data.copylib.i1.TheBar_2617_Aros_x86_64  data.copylib.i1.TheBar_2617_MorphOS  data.copylib.i1.TheBar_2619_AmigaOS3  data.copylib.i1.TheBar_2619_AmigaOS4  data.copylib.i1.TheBar_2619_Aros_i386  data.copylib.i1.TheBar_2619_Aros_ppc  data.copylib.i1.TheBar_2619_Aros_x86_64  data.copylib.i1.TheBar_2619_MorphOS  data.copylib.i2.noversion  data.execute.i1  data.getversion.i1.hwp_jpeg2000_AmigaOS3  data.getversion.i1.hwp_jpeg2000_Aros_i386  data.getversion.i1.hwp_sqlite3_AmigaOS3  data.getversion.i1.hwp_sqlite3_AmigaOS4  data.getversion.i1.hwp_sqlite3_Aros_i386  data.rexx.i1  data.rexx.i2  data.rexx.i3  data.startup.i10  data.startup.i11  data.startup.i2  data.startup.i3  data.startup.i4  data.startup.i5  data.startup.i6  data.startup.i7  data.startup.i9  data.startup.o1  data.startup.o10  (+128 more)
(+29 files in other folders)
